# rzsz

./: .gitignore  CLAUDE.md  Cargo.toml  PUBLISHING.md  README.md  README_CN.md  SUMMARY.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: lib.rs  receiver.rs  sender.rs  xmodem.rs  ymodem.rs
src/serial/: mod.rs  reader.rs  terminal.rs
src/zmodem/: crc.rs  escape.rs  frame.rs  mod.rs  session.rs
tests/: interop.sh
