[package]
name = "rzsz"
version = "0.1.0"
edition = "2021"
description = "X/Y/ZModem file transfer tool — a modern Rust rewrite of lrzsz"
license = "GPL-2.0-or-later"

[[bin]]
name = "rsz"
path = "src/bin/rsz.rs"

[[bin]]
name = "rrz"
path = "src/bin/rrz.rs"

[dependencies]
nix = { version = "0.29", features = ["term", "poll", "signal", "fs"] }
signal-hook = "0.3"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
